@@ -369,6 +369,11 @@ software version, and contact information for the SNMP device.
 
 Sets the comment string for the host.
 
+=item * C<show-recursive>
+
+Default: C<yes>. When set to C<no>, the link to the recursive view at the
+host level is omitted.
+
 =item * C<template-registry-overlays>
 
 If defined, this should be a comma-separated list of template registry
